Designer MODELER-437
====================

  - Refactor walking the UIComponent objects within a panels collection 


Designer MODELER-398
====================

 - Setting a sensor on a Web element does not work


Designer MODELER-384
====================

 - Property form title is wrong for webview and 
   color picker components


Designer MODELER-333
====================

 - Colorpicker widget


Designer MODELER-395
====================

 - Incorrect password field generated
   in panel.xml for Web element


Designer MODELER-248
====================

 - Add web view widget


Designer 2.13.9 (2013-03-30 Rosemary)
=====================================

Bug fix release:

  - MODELER-346: regexp validation for IP fields in TCP
    and Telnet protocols were wrong. Validations have
    been disabled (Juha Lindfors)
  - MODELER-348: Prevent caching of GWT Javascript files
    on client browser to avoid Javascript conflicts when
    upgrading to a newer Designer version (Eric Bariaux)
  - MODELER-360: Encoding of restricted characters in XML
    is now done properly for user entered names for 
    commands, switches, sensors, etc. (Eric Bariaux)


Internal:

  - Dev Mode target in GWT build (Eric Bariaux, MODELER-344)


Designer 2.13.8 (2013-03-13 Rosemary)
=====================================

Bug fix release:

 - MODELER-410: KNX import getting namespace used 
   on XPath from document instead of hardcoded, 
   more robust to changes.
 - MODELER-397: panStamps Lagarto configuration
   included in controller configuration options


Designer 2.13.7 (2012-10-07 Rosemary)
=====================================

 - Add Z-wave configuration


Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:

 
 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user